--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
       <a href="{{site.baseurl}}/" class="btn">Home</a></li>
-       <a href="{{site.baseurl}}/csp" class="btn">CSP</a></li>
+       <a href="{{site.baseurl}}/compsci" class="btn">CSP</a></li>
        <a href="{{site.baseurl}}/blogs" class="btn">Blogs</a></li>
        <a href="{{site.baseurl}}/help" class="btn">Help</a></li>
        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
